# live-captions-gtk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: model-bundle.yml  release.yml
src/: main.rs  pipeline.rs
src/asr/: engine.rs  mod.rs
src/audio/: capture.rs  device.rs  mod.rs
src/downloader/: archive.rs  hf.rs  http.rs  mod.rs
src/presets/: app.rs  mod.rs  models.rs  settings.rs
src/ui/: mod.rs  settings.rs  window.rs
