[package]
name = "live-captions-gtk"
version = "0.1.1"
edition = "2024"
description = "实时语音转字幕桌面应用 —— 基于 sherpa-onnx 和 libadwaita"
license = "MIT"

[dependencies]
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }
anyhow = "1.0"
bzip2 = "0.6"
cpal = { version = "0.18", default-features = false, features = [
    "pipewire",
    "pulseaudio",
] }
flate2 = "1.0"
gtk4 = "0.11"
hf-hub = { version = "1", features = ["blocking"] }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
ringbuf = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sherpa-onnx = "1.13.4"
tar = "0.4"
xz2 = "0.1"
zip = { version = "8", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 2
lto = "thin"
